--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -259,7 +259,7 @@
     // handle select change
     function onLanChange(index) {
         if (index == 0) {
-            lang = "zh"
+            lang = "ko"
         } else {
             lang = "en"
         }
